Sat Jan 17 23:42:27 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: get rid of pattern substitution, which is not
	  supported by ash, and ash on NetBSD parses whole source first
	  and fails to start.  [ruby-dev:48823] [Bug #10750]

Fri Jan 16 18:42:58 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/redmine-backporter.rb: support adding related revisions
	  to issues.

Fri Jan 16 17:20:33 2015  Koichi Sasada  <ko1@atdot.net>

	vm.c, vm_core.h: constify VM_CF_LEP, VM_CF_PREV_EP, VM_CF_BLOCK_PTR
	and rb_vm_control_frame_block_ptr.

Fri Jan 16 15:41:21 2015  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych.rb: bump version

	* ext/psych/psych.gemspec: ditto

Fri Jan 16 15:37:49 2015  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/yaml_tree.rb: only dump hash
	  subclasses. Thanks Joe Eli McIlvain <joe.eli.mac@gmail.com>

	* test/psych/test_hash.rb: test for change

Fri Jan 16 15:35:21 2015  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych.rb: bump version

	* ext/psych/lib/psych/visitors/yaml_tree.rb: fix line width wrapping
	  for long strings.  Thanks Jakub Jirutka <jakub@jirutka.cz>

	* test/psych/test_string.rb: test for change

Fri Jan 16 11:44:44 2015  Kazuki Tsujimoto  <kazuki@callcc.net>

	* eval_intern.h, vm.c, vm_eval.c, vm_insnhelper.c:
	  change throw mechanism (not save target ep, but save target cfp).
	  It fixes `unexpected break' bug that occurs when
	  TracePoint#binding is called.
	  [ruby-dev:48797] [Bug #10689]

	* test/ruby/test_settracefunc.rb: add a test.

Thu Jan 15 23:55:15 2015  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_io_close_m): Don't raise when the IO object is closed.
	  [ruby-core:67444] [Feature #10718]

Thu Jan 15 21:34:57 2015  Seiei Higa  <hanachin@gmail.com>

	* proc.c (rb_obj_singleton_method): Kernel#singleton_method should
	  not use refinements, as well as Kernel#method.
	  [ruby-core:67603] [Bug #10744]
